# iottyCloud

./: .gitignore  README.md  pyproject.toml
src/iottycloud/: cloudapi.py  device.py  errors.py  iottycloud.py  lightswitch.py  outlet.py  shutter.py  utils.py  verbs.py
src/iottycloud/tests/: test_create.py
tests/: helpers.py  test_create.py
