[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iottycloud"
version = "0.0.1"
authors = [
  { name="Paolo Burgio", email="paolo.burgio@gmail.com" },
  { name="Luca Marzaduri", email="luca.marzaduri@iotty.com" },
  { name="Shapour Nemati", email="shapour.nemati@iotty.com" },
]
description = "A Python library to interact with iotty CloudApi"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU AGPL",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pburgio/iottycloud"
"Bug Tracker" = "https://github.com/pburgio/iottycloud/issues"