[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iottycloud"
version = "0.2.0-rc-3"
authors = [
  { name="Paolo Burgio", email="paolo.burgio@gmail.com" },
  { name="Luca Marzaduri", email="luca.marzaduri@iotty.com" },
  { name="Shapour Nemati", email="shapour.nemati@iotty.com" },
]
description = "A Python library to interact with iotty CloudApi"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pburgio/iottycloud"
"Bug Tracker" = "https://github.com/pburgio/iottycloud/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/iottycloud"]

[tool.hatch.build]
exclude = [
  "/docs",
  "/tests",
]